fix modal cutoff bug

--- a/browser/custom.css
+++ b/browser/custom.css
@@ -154,6 +154,7 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    max-height: none;
 }
 
 /* Modal Content/Box */
